# Kaizen

./: .env  .gitignore  Dockerfile  README.md  app.py  ersGaurav KumarOneDriveDesktopcompanyamazon-copyamazon  package-lock.json  package.json  requirements.txt  temp_working_version.js
blog-pipeline/: NOTE  app.py  documentation.txt  postgres.py  pyproject.toml
blog-pipeline/daemons/: blog.py  docket.py
blog-pipeline/daemons/blogscripts/: allocatealliedkeywords.py  allocateinterlinks.py  conclusiontitle.py  docketfunctions.py  duplicate.py  titles.py  (+6 more)
blog-pipeline/modules/: admin.py  blogallocator.py  bloganalyzer.py  blogevaluator.py  docketcreator.py  keywordcreator.py  root.py  translationanalyst.py  xdocketcreator.py
blog-pipeline/publish/: app.py  bcp.json
blog-pipeline/reserve/: convert.py  docket.py  evaluators.txt  push.py  sheet.db
blog-pipeline/templates/: admin.html  admin_accounts.html  admin_impersonate.html  blogallocator.html  bloganalyzer.html  bloganalyzer_blog.html  bloganalyzer_published.html  blogevaluator_duplicates.html  blogevaluator_list.html  docketcreator.html  keywordcreator.html  keywordcreator_docketstatus.html  keywordcreator_docketstatus_docketcreator.html  keywordcreator_duplicates.html  root.html  translationanalyst.html  vblogevaluator_blog.html  wblogevaluator_blog.html  xbloganalyzer.html  xbloganalyzer_blog.html  xblogevaluator_blog.html  yblogevaluator_blog.html  zblogevaluator_blog.html
blog-pipeline/trans/: init.py  proc.py
blog-pipeline/z/: app.py  ash.py  bpp.py  createtable.py  dup.py  msheel.py  savedocket.py
(+208 files in other folders)
